# hpvm-spandex

./: .gitignore  CREDITS.TXT  README.md
.hooks/: pre-commit
hpvm/: CMakeLists.txt  install.sh
hpvm/docs/: compilation.md  hpvm-c.md  hpvm-specification.md
hpvm/include/Spandex/: Spandex.h
hpvm/include/SupportHPVM/: DFG2LLVM.h  DFGTreeTraversal.h  DFGraph.h  HPVMHint.h  HPVMUtils.h
hpvm/lib/Transforms/: CMakeLists.txt
hpvm/lib/Transforms/BuildDFG/: BuildDFG.cpp
hpvm/lib/Transforms/DFG2LLVM_CPU/: CMakeLists.txt  DFG2LLVM_CPU.cpp
hpvm/lib/Transforms/DFG2LLVM_OpenCL/: CMakeLists.txt  DFG2LLVM_OpenCL.cpp
hpvm/lib/Transforms/GenHPVM/: CMakeLists.txt  GenHPVM.cpp
hpvm/lib/Transforms/Spandex/: CMakeLists.txt  LLVMBuild.txt  Spandex.cpp
hpvm/llvm_patches/: construct_patch.sh
hpvm/llvm_patches/include/llvm/IR/: IntrinsicsHPVM.td
hpvm/projects/: CMakeLists.txt
hpvm/projects/hpvm-rt/: CMakeLists.txt  deviceStatusSwitchIntervals.txt  device_abstraction.h  hpvm-rt.cpp  makefile  policy.h
hpvm/scripts/: automated_tests.sh  docker.sh  hpvm_build.sh  llvm_installer.sh  run_docker.sh
hpvm/test/: CMakeLists.txt  README.md  lit.cfg.py  lit.site.cfg.py.in
hpvm/test/benchmarks/hpvm-cava/: Makefile
hpvm/test/benchmarks/hpvm-cava/src/: main.c
hpvm/test/benchmarks/pipeline/: Makefile
hpvm/test/benchmarks/pipeline/src/: main.cc
hpvm/test/unitTests/: ThreeLevel.ll
hpvm/tools/: CMakeLists.txt
